--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "viem": "^2.38.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
