--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
     "react": "^19.1.1",
@@ -27,7 +30,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^7.1.7",
-    "typescript": "^5.6.0"
+    "typescript": "^5.6.0",
+    "vite": "^7.1.7"
   }
 }
