--- a/nginx.conf
+++ b/nginx.conf
@@ -24,8 +24,8 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Proxy routes that don't start with /api (like /latest-blocks, /blocks, etc.)
-    location ~ ^/(latest-blocks|latest-transactions|blocks|transactions|addresses|health) {
+    # Proxy health check endpoint
+    location /health {
         proxy_pass http://api:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
