--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mevscan-server",
+  "name": "@mevscan/server",
   "version": "1.0.0",
   "description": "Express.js API server for MEVScan",
   "main": "dist/index.js",
@@ -21,7 +21,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "@clickhouse/client": "^0.2.7",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@mevscan/shared": "*"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
