--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lint": "npm run lint --workspaces --if-present"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "typescript": "^5.6.0"
   }
 }
