--- a/shared/package.json
+++ b/shared/package.json
@@ -5,7 +5,8 @@
   "main": "types.ts",
   "types": "types.ts",
   "exports": {
-    ".": "./types.ts"
+    ".": "./types.ts",
+    "./constants": "./constants.ts"
   },
   "scripts": {
     "build": "tsc --noEmit"
@@ -14,4 +15,3 @@
     "typescript": "^5.6.0"
   }
 }
-
