--- a/websocket/package.json
+++ b/websocket/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "websocket",
+  "name": "@mevscan/websocket",
   "version": "1.0.0",
-  "description": "",
+  "description": "WebSocket service for MEVScan",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node index.ts",
+    "dev:watch": "nodemon"
   },
-  "keywords": [],
+  "keywords": [
+    "websocket",
+    "pubnub",
+    "blockchain",
+    "mev"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "pubnub": "^10.2.3",
+    "@mevscan/shared": "*"
+  },
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.2",
+    "@types/node": "^20.14.0"
   }
 }
