--- a/shared/package.json
+++ b/shared/package.json
@@ -6,10 +6,14 @@
   "types": "types.ts",
   "exports": {
     ".": "./types.ts",
-    "./constants": "./constants.ts"
+    "./constants": "./constants.ts",
+    "./clickhouse": "./clickhouse.ts"
   },
   "scripts": {
     "build": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@clickhouse/client": "^0.2.7"
   },
   "devDependencies": {
     "typescript": "^5.6.0"
