--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mevscan/shared": "*",
     "@mui/material": "^7.3.4",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
-    "viem": "^2.38.6",
-    "@mevscan/shared": "*"
+    "viem": "^2.38.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -35,4 +36,3 @@
     "vite": "^7.1.7"
   }
 }
-
