--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "scripts": {
     "dev": "npm run dev --workspace=client",
     "dev:server": "npm run dev --workspace=server",
+    "dev:websocket": "npm run dev --workspace=websocket",
     "dev:watch": "npm run dev:watch --workspace=server",
     "build": "npm run build --workspaces --if-present",
     "build:client": "npm run build --workspace=client",
     "build:server": "npm run build --workspace=server",
+    "build:websocket": "npm run build --workspace=websocket",
     "lint": "npm run lint --workspaces --if-present"
   },
   "devDependencies": {
