--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
+    "pubnub": "^10.2.4",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
