--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,11 @@
     "@mui/material": "^7.3.4",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
-    "chart.js": "^4.5.1",
-      "echarts": "^5.6.0",
-      "echarts-for-react": "^3.0.2",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "react": "^19.1.1",
-    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5",
-    "recharts": "^3.3.0"
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
