integrate with live data

--- a/env.sample
+++ b/env.sample
@@ -4,4 +4,6 @@ CLICKHOUSE_USERNAME=default
 CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DATABASE=default
 VITE_API_BASE_URL=http://localhost:3001
-
+PUBNUB_PUBLISH_KEY=
+PUBNUB_SUBSCRIBE_KEY=
+PUBNUB_SECRET_KEY=
