--- a/env.sample
+++ b/env.sample
@@ -5,5 +5,5 @@ CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DATABASE=default
 VITE_API_BASE_URL=http://localhost:3001
 PUBNUB_PUBLISH_KEY=
-PUBNUB_SUBSCRIBE_KEY=
 PUBNUB_SECRET_KEY=
+VITE_PUBNUB_SUBSCRIBE_KEY=
