--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "typescript": "^5.6.0"
+  },
+  "dependencies": {
+    "pubnub-react": "^3.0.2"
   }
 }
