--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mevscan/shared": "*",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.4",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
