--- a/shared/package.json
+++ b/shared/package.json
@@ -5,13 +5,19 @@
   "main": "types.ts",
   "types": "types.ts",
   "exports": {
-    ".": "./types.ts"
+    ".": "./types.ts",
+    "./clickhouse": "./clickhouse.ts",
+    "./config": "./config.ts",
+    "./pubnub": "./pubnub.ts"
   },
   "scripts": {
     "build": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@clickhouse/client": "^0.2.7",
+    "pubnub": "^10.2.3"
   },
   "devDependencies": {
     "typescript": "^5.6.0"
   }
 }
-
