--- a/env.sample
+++ b/env.sample
@@ -4,4 +4,11 @@ CLICKHOUSE_USERNAME=default
 CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DATABASE=default
 VITE_API_BASE_URL=http://localhost:3001
+VITE_PUBNUB_SUBSCRIBE_KEY=
 
+PUBNUB_PUBLISH_KEY=
+PUBNUB_SUBSCRIBE_KEY=
+PUBNUB_SECRET_KEY=
+PUBNUB_USER_ID=
+
+TEST_PUBNUB=
