--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.13.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "pubnub": "^7.6.3",
+    "pubnub-react": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
