--- a/env.sample
+++ b/env.sample
@@ -4,13 +4,6 @@ CLICKHOUSE_USERNAME=default
 CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DATABASE=default
 VITE_API_BASE_URL=http://localhost:3001
-VITE_PUBNUB_SUBSCRIBE_KEY=
-
-PUBNUB_PUBLISH_KEY=
-PUBNUB_SUBSCRIBE_KEY=
-PUBNUB_SECRET_KEY=
-PUBNUB_USER_ID=
 
 ABLY_API_KEY=
-
-TEST_PUBNUB=
+TEST_ABLY=
