--- a/shared/package.json
+++ b/shared/package.json
@@ -8,7 +8,6 @@
     ".": "./types.ts",
     "./clickhouse": "./clickhouse.ts",
     "./config": "./config.ts",
-    "./pubnub": "./pubnub.ts",
     "./ably": "./ably.ts"
   },
   "scripts": {
@@ -16,8 +15,7 @@
   },
   "dependencies": {
     "@clickhouse/client": "^0.2.7",
-    "ably": "^2.15.0",
-    "pubnub": "^10.2.3"
+    "ably": "^2.15.0"
   },
   "devDependencies": {
     "typescript": "^5.6.0"
