--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mevscan/shared": "*",
     "@mui/material": "^7.3.4",
     "@tanstack/react-query": "^5.90.6",
+    "ably": "^2.15.0",
     "axios": "^1.13.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
