--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mevscan/shared": "*",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.4",
+    "@number-flow/react": "^0.5.10",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
     "echarts": "^5.6.0",
