update to return all transactions with db cursor

--- a/env.sample
+++ b/env.sample
@@ -6,4 +6,6 @@ CLICKHOUSE_DATABASE=default
 VITE_API_BASE_URL=http://localhost:3001
 
 ABLY_API_KEY=
-TEST_ABLY=
+VITE_ABLY_SUBSCRIBE_KEY=
+
+NODE_ENV=
