--- a/shared/package.json
+++ b/shared/package.json
@@ -8,7 +8,8 @@
     ".": "./types.ts",
     "./clickhouse": "./clickhouse.ts",
     "./config": "./config.ts",
-    "./ably": "./ably.ts"
+    "./ably": "./ably.ts",
+    "./ablyConstants": "./ablyConstants.ts"
   },
   "scripts": {
     "build": "tsc --noEmit"
