--- a/websocket/package.json
+++ b/websocket/package.json
@@ -21,6 +21,7 @@
     "@clickhouse/client": "^0.2.7",
     "@mevscan/shared": "*",
     "ably": "^2.15.0",
+    "dotenv": "^16.3.1",
     "pino": "^9.6.0"
   },
   "devDependencies": {
