--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "shared",
     "server",
     "client",
-    "websocket"
+    "websocket",
+    "mcp"
   ],
   "scripts": {
     "dev": "npm run dev --workspace=client",
     "dev:server": "npm run dev --workspace=server",
     "dev:watch": "npm run dev:watch --workspace=server",
     "dev:websocket": "npm run dev --workspace=websocket",
+    "dev:mcp": "npm run dev --workspace=mcp",
     "build": "npm run build --workspaces --if-present",
     "build:client": "npm run build --workspace=client",
     "build:server": "npm run build --workspace=server",
